@@ -14,6 +14,7 @@
 #
 ############################################################################
 
+
 import argparse
 import math
 import random
@@ -21,31 +22,69 @@ from string import digits, ascii_letters, punctuation
 import textwrap
 
 
-def make_password(blacklist="", flags="dlps", length=8, limit=1):
+def sanitize_input(dictionary):
+    """Sanitizes the input for the make_password function
+
+    :param dictionary: contains a namespace of the users or others programs input
+    :return: a sanitized namespace or in case of malicious input stops the program
+    """
+    try:
+        # preventing double flags
+        for flag in dictionary.flags:
+            if dictionary.flags.count(flag) > 1:
+                raise ValueError("Flags can occur only once in the statement!")
+        # preventing that the program runs with no valid flags given
+        count = 4
+        for flag in ["d", "l", "p", "s"]:
+            if flag not in dictionary.flags:
+                count -= 1
+        if count < 1:
+            raise ValueError("No valid flags given!")
+        # throwing away any incorrect flag
+        tmp_flag = ""
+        for flag in dictionary.flags:
+            if flag in ["d", "l", "p", "s"]:
+                tmp_flag += flag
+        dictionary.flags = tmp_flag
+        # preventing incorrect values for limit
+        if dictionary.limit < 1 or dictionary.limit > dictionary.length:
+            raise ValueError("The limit has to have at least a value of 1 and makes no sense if longer than length!")
+        # preventing passwords below the length of 8
+        if dictionary.length < 8:
+            dictionary.length = 8
+            print("For your own safety, the password has been set to be at least 8 characters long!")
+    except ValueError as error:
+        print("An error occurred: {0}".format(error))
+        exit()
+    else:
+        return dictionary
+
+
+def make_password(dictionary):
     """Make a password of a given length randomizing characters contained in char_set variable.
 
-    :param blacklist: blacklisted characters which are not used for password
-    :param flags: a string containing the settings for the character pool
-    :param length: integer value defining the length of the password
-    :param limit: integer value defining the max occurrences of a single character in the end result
+    :param dictionary: a namespace containing entries for blacklist, flags, length and limit
+    :var dictionary.blacklist: blacklisted characters which are not used for password
+    :var dictionary.flags: a string containing the settings for the character pool
+    :var dictionary.length: integer value defining the length of the password
+    :var dictionary.limit: integer value defining the max occurrences of a single character in the end result
     :return: a string containing the password
     """
 
     # Define the characters which are valid for making a password
     char_all = {'d': digits, 'l': ascii_letters, 'p': punctuation, 's': ' '}
     char_set = ""
-    for flag in flags:
-        if flag in char_all:
+    for flag in dictionary.flags:
             char_set += char_all[flag]
     # Prevent infinite loop
-    if length > len(char_set) * limit:
-        limit = math.ceil(length / len(char_set))
+    if dictionary.length > len(char_set) * dictionary.limit:
+        dictionary.limit = math.ceil(dictionary.length / len(char_set))
     # Put the password together
     return_value = []
     password = ""
-    while len(return_value) < length:
+    while len(return_value) < dictionary.length:
         tmp_char = random.choice(char_set)
-        if return_value.count(tmp_char) < limit and tmp_char not in blacklist:
+        if return_value.count(tmp_char) < dictionary.limit and tmp_char not in dictionary.blacklist:
             return_value.append(tmp_char)
     return password.join(return_value)
 
@@ -75,27 +114,7 @@ if __name__ == "__main__":
     parser.add_argument("-b", "--blacklist", type=str, default="",
                         help="the characters to be excluded from password generation")
     parser.add_argument("-v", "--version", action="version", version="%(prog)s 0.00.04")
-    results = parser.parse_args()
-    # Sanitize input
-    try:
-        for i in results.flags:
-            if results.flags.count(i) > 1:
-                raise ValueError("Flags can occur only once in the statement!")
-        count = 4
-        for i in ["d", "l", "p", "s"]:
-            if i not in results.flags:
-                count -= 1
-        if count < 1:
-            raise ValueError("No valid flags given!")
-        if results.limit < 1 or results.limit > results.length:
-            raise ValueError("The limit has to have at least a value of 1 and makes no sense if longer than length!")
-        if results.length < 8:
-            results.length = 8
-            print("For your own safety, the password has been set to be at least 8 characters long!")
-    except ValueError as error:
-        print("An error occurred: {0}".format(error))
-    else:
-        # Output password
-        print("==== Your password is ... ====")
-        print(make_password(**vars(results)))
-        print("==============================")
+    # Output password
+    print("==== Your password is ... ====")
+    print(make_password(sanitize_input(parser.parse_args())))
+    print("==============================")
